--- a/client/钱包接口.md
+++ b/client/钱包接口.md
@@ -18,25 +18,26 @@ URL:{baseurl}/api
     "id": 0,
     "jsonrpc": "2.0",
     "result": {
+        "mnemonic": "aim birth sail rebel attack minor calm barrel lunar setup interest kiwi",
         "address": "0xe3A81Fc2C6d38763D2C167A602B1b540554f57F4",
         "keystore": {
-            "address": "e3a81fc2c6d38763d2c167a602b1b540554f57f4",
+            "address": "1c50b5015d43c3d9130394cc560c1f7968662103",
             "crypto": {
                 "cipher": "aes-128-ctr",
                 "cipherparams": {
-                    "iv": "75371729d87a56b9598c69533856a5d3"
+                    "iv": "8451fd329679a199485beed35177c01b"
                 },
-                "ciphertext": "2119778e59ab0191419c6134423241948e862a8b979258cfa73e4e61a83f2b79",
+                "ciphertext": "a239174367f040c2f3a0b991b71f2eeb0653f6f3725408201b117389f824e126",
                 "kdf": "pbkdf2",
                 "kdfparams": {
                     "c": 1000000,
                     "dklen": 32,
                     "prf": "hmac-sha256",
-                    "salt": "9acab82ebea752bf921cc408966e8b21"
+                    "salt": "b2f0a3c02a8d9d45defd49dae4608e27"
                 },
-                "mac": "5593bf5c41bf9a3b9fb2ddc7764125b63739d5e39dd649d498444ec7c4c736d1"
+                "mac": "db19e04c232fa842a333f91e4ff6ff491b931f72b4a0b5f85a176a27b5f53b3a"
             },
-            "id": "b6875b47-0dca-457e-9d13-236e7a4f15bb",
+            "id": "4dce3e8f-cecf-4a2b-ad43-93c6076f477b",
             "version": 3
         }
     }
@@ -79,7 +80,7 @@ error
 ```
 # 发送裸交易
 ---
-URL:{baseurl}/hollywant/pay
+URL:{baseurl}/api
 ## 上行
 ```json
 {
@@ -90,7 +91,7 @@ URL:{baseurl}/hollywant/pay
         "to_address": "0xe3A81Fc2C6d38763D2C167A602B1b540554f57F4",
         "value":10,
         "pwd":"xxxx",
-        "keystore":{},
+        "keystore":{}
     }
 }
 ```
@@ -140,9 +141,9 @@ error
 ```
 # 导出私钥
 ---
-URL:{baseurl}/hollywant/pay
+URL:{baseurl}/api
 ## 上行
-```
+```json
 {
     "jsonrpc": "2.0",
     "id": 1,
@@ -154,7 +155,7 @@ URL:{baseurl}/hollywant/pay
 }
 ```
 ## 下行
-```
+```json
 {
     "jsonrpc": "2.0",
     "id": 1,
