--- a/client/钱包接口.md
+++ b/client/钱包接口.md
@@ -2,168 +2,344 @@
 ---
 URL:{baseurl}/api
 ## 上行
+加密前
 ```json
 {
-    "jsonrpc": "2.0",
-    "id": 1,
-    "method": "create_account1",
+    "method": "create_account",
     "params": {
-        "pwd": "hyf"
-    }
+        "appid": "hyf_app",
+        "sign": "",
+        "data": {
+            "pwd": "123456"
+        }
+    },
+    "jsonrpc": "2.0",
+    "id": 0
+}
+```
+加密后
+```json
+{
+    "method": "create_account",
+    "params": {
+        "appid": "hyf_app",
+        "sign": "50d3a24e385db092fa",
+        "data": "50d3a24e385db092fa50d3a24e385db092fa"
+    },
+    "jsonrpc": "2.0",
+    "id": 0
 }
 ```
 ## 下行
+加密前
 ```json
 {
-    "id": 0,
-    "jsonrpc": "2.0",
     "result": {
-        "address": "0xe3A81Fc2C6d38763D2C167A602B1b540554f57F4",
-        "keystore": {
-            "address": "e3a81fc2c6d38763d2c167a602b1b540554f57f4",
-            "crypto": {
-                "cipher": "aes-128-ctr",
-                "cipherparams": {
-                    "iv": "75371729d87a56b9598c69533856a5d3"
+        "code": "success",
+        "sign": "",
+        "data": {
+            "mnemonic": "park impose pluck solid vague deer sort vessel regular aisle subject slender",
+            "address": "0xC1F99048c0F3ea31E28dFF520b04f4774DA5b454",
+            "keystore": {
+                "address": "c1f99048c0f3ea31e28dff520b04f4774da5b454",
+                "crypto": {
+                    "cipher": "aes-128-ctr",
+                    "cipherparams": {
+                        "iv": "bdc5f1d7fccf11f5ebe1e6307f14b086"
+                    },
+                    "ciphertext": "ef83489a9c6e56407292ddf7326140a53514d0fd8cfd6c4fce6a82fb390ae17a",
+                    "kdf": "pbkdf2",
+                    "kdfparams": {
+                        "c": 1000000,
+                        "dklen": 32,
+                        "prf": "hmac-sha256",
+                        "salt": "a7c865cfff5dc03923dc086dd6394932"
+                    },
+                    "mac": "33350d3a24e385db092fa351201498733ad2ef7d7707b5fe2d90834f17b76e80"
                 },
-                "ciphertext": "2119778e59ab0191419c6134423241948e862a8b979258cfa73e4e61a83f2b79",
-                "kdf": "pbkdf2",
-                "kdfparams": {
-                    "c": 1000000,
-                    "dklen": 32,
-                    "prf": "hmac-sha256",
-                    "salt": "9acab82ebea752bf921cc408966e8b21"
-                },
-                "mac": "5593bf5c41bf9a3b9fb2ddc7764125b63739d5e39dd649d498444ec7c4c736d1"
+                "id": "8105bff0-3e59-43bc-ab39-ba5c63ab3e0c",
+                "version": 3
             },
-            "id": "b6875b47-0dca-457e-9d13-236e7a4f15bb",
-            "version": 3
+            "private_key": "93dba7452826bf91fd889f97ff26c127ba8a697854ddf1dded97ce9adec7342c"
         }
-    }
+    },
+    "id": 0,
+    "jsonrpc": "2.0"
+}
+```
+加密后
+```json
+{
+    "result": {
+        "code": "success",
+        "sign": "50d3a24e385db092fa",
+        "data": "50d3a24e385db092fa50d3a24e385db092fa"
+    },
+    "id": 0,
+    "jsonrpc": "2.0"
 }
 ```
 ```
 error
-{'result': {'error': 'no password'}, 'id': 0, 'jsonrpc': '2.0'}
+{"result": {"code": "fail", "error": "no password"}, "id": 0, "jsonrpc": "2.0"}
 ```
 # 获取余额
 ---
 URL:{baseurl}/api
 ## 上行
+加密前
 ```json
 {
-    "jsonrpc": "2.0",
-    "id": 1,
     "method": "get_balance",
     "params": {
-        "account": "0xe3A81Fc2C6d38763D2C167A602B1b540554f57F4"
-    }
+        "appid": "hyf_app",
+        "sign": "",
+        "data": {
+            "address": "0x4b75f75398672BD76587c0Bb1f4Ab7dd3673b9D1"
+        }
+    },
+    "jsonrpc": "2.0",
+    "id": 0
+}
+```
+加密后
+```json
+{
+    "method": "get_balance",
+    "params": {
+        "appid": "hyf_app",
+        "sign": "",
+        "data": ""
+    },
+    "jsonrpc": "2.0",
+    "id": 0
 }
 ```
 ## 下行
+加密前
 ```json
 {
     "id": 0,
     "jsonrpc": "2.0",
     "result": {
-        "address": "0xe3A81Fc2C6d38763D2C167A602B1b540554f57F4",
-        "keystore": {
-            "address": "e3a81fc2c6d38763d2c167a602b1b540554f57f4",
-            "eth_balance": 100
+        "code": "success",
+        "sign": "",
+        "data": {
+            "eth_balance": "100"
+        }
+    }
+}
+```
+加密后
+```json
+{
+    "id": 0,
+    "jsonrpc": "2.0",
+    "result": {
+        "code": "success",
+        "sign": "",
+        "data": ""
     }
 }
 ```
 ```
 error
-{'result': {"error": "no account"}, 'id': 0, 'jsonrpc': '2.0'}
+{"result": {"code":"fail", "error": "no address"}, "id": 0, "jsonrpc": "2.0"}
 ```
 # 发送裸交易
 ---
 URL:{baseurl}/api
 ## 上行
+加密前
 ```json
 {
-    "jsonrpc": "2.0",
-    "id": 1,
     "method": "send_transaction",
     "params": {
-        "to_address": "0xe3A81Fc2C6d38763D2C167A602B1b540554f57F4",
-        "value":10,
-        "pwd":"xxxx",
-        "keystore":{},
-    }
+        "appid": "hyf_app",
+        "sign": "",
+        "data": {
+            "to_address": "2c7fbb570d42f433a2b7c788b531c2b51633150f",
+            "value": 10,
+            "gas_limit": 200000,
+            "gas_price": 3000,
+            "pwd": "hyf",
+            "keystore": {}
+        }
+    },
+    "jsonrpc": "2.0",
+    "id": 0
+}
+```
+加密后
+```json
+{
+    "method": "send_transaction",
+    "params": {
+        "appid": "hyf_app",
+        "sign": "",
+        "data": ""
+    },
+    "jsonrpc": "2.0",
+    "id": 0
 }
 ```
 ## 下行
+加密前
 ```json
 {
     "jsonrpc": "2.0",
     "id": 1,
     "result": {
-        "tx_hash": "xxxxxx"
+        "code": "success",
+        "sign": "",
+        "data": {
+            "tx_hash": "xxxxxx"
+        }
+    }
+}
+```
+加密后
+```json
+{
+    "jsonrpc": "2.0",
+    "id": 1,
+    "result": {
+        "code": "success",
+        "sign": "",
+        "data": ""
     }
 }
 ```
 ```
 error
-{'result': {"error": "xx error"}, 'id': 0, 'jsonrpc': '2.0'}
+{"result": {"code": "fail", "error": "xx error"}, "id": 0, "jsonrpc": "2.0"}
 ```
 # 导入私钥创建账户
 ---
 URL:{baseurl}/api
 ## 上行
+加密前
 ```json
 {
-    "jsonrpc": "2.0",
-    "id": 1,
     "method": "import_private_key",
     "params": {
-        "private_key": "xxxxx",
-        "pwd": "xxx"
-    }
+        "appid": "hyf_app",
+        "sign": "",
+        "data": {
+            "private_key": "",
+            "pwd": ""
+        }
+    },
+    "jsonrpc": "2.0",
+    "id": 0
+}
+```
+加密后
+```json
+{
+    "method": "import_private_key",
+    "params": {
+        "appid": "hyf_app",
+        "sign": "",
+        "data": ""
+    },
+    "jsonrpc": "2.0",
+    "id": 0
 }
 ```
 ## 下行
+加密前
 ```json
 {
     "jsonrpc": "2.0",
     "id": 1,
     "result": {
-        "address": "xxxx",
-        "keystore": {}
+        "code": "success",
+        "sign": "",
+        "data":{
+            "address": "xxxx",
+            "keystore": {}
+        }
+    }
+}
+```
+加密后
+```json
+{
+    "jsonrpc": "2.0",
+    "id": 1,
+    "result": {
+        "code": "success",
+        "sign": "",
+        "data": ""
     }
 }
 ```
 ```
 error
-{'result': {"error": "xx error"}, 'id': 0, 'jsonrpc': '2.0'}
+{"result": {"code":"fail", "error": "xx error"}, "id": 0, "jsonrpc": "2.0"}
 ```
 # 导出私钥
 ---
 URL:{baseurl}/api
 ## 上行
-```
+加密前
+```json
 {
-    "jsonrpc": "2.0",
-    "id": 1,
-    "method": "import_private_key",
+    "method": "export_private",
     "params": {
-        "private_key": "xxxxx",
-        "pwd": "xxx"
-    }
+        "appid": "hyf_app",
+        "sign": "",
+        "data": {
+            "keystore": {},
+            "pwd": "hyf"
+        }
+    },
+    "jsonrpc": "2.0",
+    "id": ""
+}
+```
+加密后
+```json
+{
+    "method": "export_private",
+    "params": {
+        "appid": "hyf_app",
+        "sign": "",
+        "data": ""
+    },
+    "jsonrpc": "2.0",
+    "id": ""
 }
 ```
 ## 下行
-```
+加密前
+```json
 {
     "jsonrpc": "2.0",
     "id": 1,
     "result": {
-        "private_key": "xxxx"
+        "code": "success",
+        "sign": "",
+        "data": {
+            "private_key": ""
+        }
+    }
+}
+```
+加密后
+```json
+{
+    "jsonrpc": "2.0",
+    "id": 1,
+    "result": {
+        "code": "success",
+        "sign": "",
+        "data": ""
     }
 }
 ```
 ```
 error
-{'result': {"error": "xx error"}, 'id': 0, 'jsonrpc': '2.0'}
+{"result": {"code": "fail":,"error": "xx error"}, "id": 0, "jsonrpc": "2.0"}
 ```
